--- a/src/main/resources/css/main.css
+++ b/src/main/resources/css/main.css
@@ -1,3 +1,10 @@
+/* COLORS */
+/* TEXT */
+/* GENERAL STYLES */
+*, *::before, *::after {
+  box-sizing: inherit;
+}
+
 * {
   padding: 0px;
   margin: 0px;
@@ -268,4 +275,168 @@ table#data-tables tr td:nth-child(3), table#data-tables tr.even td.sorting_1 td:
 }
 .right .top-chart {
   height: 300px;
+}
+
+.tagline {
+  width: 100% !important;
+  display: flex;
+  justify-content: center;
+}
+
+.section1 {
+  width: 80% !important;
+  margin: 0 auto;
+}
+.section1 .data {
+  width: 100% !important;
+}
+.section1 .data .image {
+  width: 20%;
+  float: left;
+  justify-self: center;
+}
+.section1 .data .image img {
+  width: 80% !important;
+  margin: 10px auto;
+}
+.section1 .data .text {
+  width: 80%;
+  float: right;
+}
+
+.card-container {
+  display: flex;
+  margin: 18rem auto 2rem auto;
+  border-radius: 1rem;
+  min-height: 45rem;
+  width: 90%;
+  border-radius: 1rem;
+  background-color: whitesmoke;
+  /* left-side */
+  /* RIGHT */
+  /* RESPONSIVE */
+}
+.card-container #left-side {
+  flex: 1 1 0;
+  position: relative;
+}
+.card-container .container-img-mob {
+  display: none;
+}
+.card-container .container-img-desktop {
+  overflow: hidden;
+  position: relative;
+  height: 100%;
+  background-image: url("https://raw.githubusercontent.com/ViktoriiaZaichuk/faq-accordion-card-main/48bb14e632a5bd5d9190da88b45d21622dd2ed14/img/bg-pattern-desktop.svg");
+  background-repeat: no-repeat;
+  background-size: 190%;
+  background-position: -455px -235px;
+}
+.card-container .pattern-desk {
+  position: relative;
+  bottom: 300px;
+  right: 570px;
+}
+.card-container .woman-desk {
+  position: absolute;
+  top: 40px;
+  left: -100px;
+  z-index: 1;
+}
+.card-container .box-img {
+  position: absolute;
+  top: 175px;
+  left: -110px;
+  z-index: 3;
+}
+.card-container #right-side {
+  flex: 1 1 0;
+  padding-left: 1rem 0 1rem 3rem;
+  margin: 1.5rem;
+  align-self: center;
+}
+.card-container h1 {
+  padding: 2rem 3rem 2rem 0;
+}
+.card-container .question-container {
+  border-bottom: solid #e7e7e9 0.1rem;
+  padding: 2rem 0;
+}
+.card-container .question {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  cursor: pointer;
+}
+.card-container .question p {
+  color: #4a4b5e;
+  font-weight: 400;
+}
+.card-container .question:hover p {
+  color: #f47c57;
+}
+.card-container .hidden {
+  display: none;
+}
+.card-container .hidden p {
+  color: #787887;
+  padding: 1rem 3rem 0 0;
+}
+.card-container .question-active p {
+  color: #1d1e35;
+  font-weight: 700;
+  font-size: 1.3rem;
+}
+.card-container .question-active:hover p {
+  color: #1d1e35;
+}
+.card-container .arrow {
+  display: block;
+  transform-origin: center;
+  transition: 0.5s;
+  padding: 0 1.5rem;
+}
+.card-container .question-active .arrow-active {
+  transition: 0.5s;
+  transform: rotate(-180deg);
+}
+@media only screen and (max-width: 1050px) {
+  .card-container .card-container {
+    margin: 120px 0;
+    flex-direction: column;
+    max-width: 90vw;
+  }
+  .card-container #left-side {
+    height: 30%;
+  }
+  .card-container .container-img-desktop {
+    display: flex;
+  }
+  .card-container .box-img {
+    display: none;
+  }
+  .card-container .container-img-mob {
+    display: block;
+  }
+  .card-container .pattern-mobile {
+    position: relative;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    top: 45px;
+  }
+  .card-container .woman-mobile {
+    position: absolute;
+    top: -10%;
+    left: 46%;
+    transform: translate(-50%, -50%);
+  }
+  .card-container h1 {
+    text-align: center;
+    padding: 0.5rem 0 2rem 0;
+  }
+  .card-container #right-side {
+    height: 70%;
+    padding: 2rem 0 3rem 0s;
+    margin: 1rem 2rem 3rem 2rem;
+  }
 }
